# opengl-engine-troy

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json  settings.json  style.json
includes/core/: app_state.h  application.h  config.h  context.h  game.h  game_flow_fsm.h  profiler.h  rect.h  resources.h
includes/core/ecs/: base_components.h  clan_components.h  components.h  ecs.h  entity.h  prefab_registry.h
includes/core/editor/: editor.h  imgui_impl.h  world_map_edit.h
includes/core/fsm/: finite_state_machine.h  game_flow_fsm.h
includes/core/memory/: arena.h
includes/core/time/: timer.h
includes/gameplay/scenes/: clans_list_scene.h  loading_scene.h  main_menu_scene.h  world_map_scene.h
includes/gameplay/states/: start_game_state.h
includes/generation/: map_generation.h  text_generation.h
includes/graphics/: camera.h  gpu_buffer.h  graphics.h  material.h  mesh.h  primitive_factory.h  renderer.h  renderer2d.h  shader.h  shader_program.h  texture.h  ttfonts.h
includes/graphics/camera/: camera.h  camera_ortho.h
includes/graphics/opengl/: gpu_buffer.h  opengl_framebuffer.h  opengl_impl.h  opengl_renderer.h
includes/graphics/rendering/: canvas_2d.h  render_queue.h  renderer.h
includes/rmui/: ui.h  ui_button.h  ui_factory.h  ui_image.h  ui_interaction.h  ui_label.h  ui_layout.h  ui_widget.h  ui_window.h
includes/rmui/factories/: ui_factory.h
includes/rmui/style/: ui_style.h
includes/services/: audio_service.h  file_service.h  input_service.h  log_service.h  scene.h  scene_service.h  service.h  service_locator.h  ui_service.h
includes/utility/: file_util.h  id_pool.h  random.h  utils.h
shaders/: def_frag.glsl  def_vert.glsl  fragment.glsl  grad_frag.glsl  grad_vert.glsl  primitive_frag.glsl  primitive_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  ttf_frag.glsl  ttf_vert.glsl  ui_frag.glsl  vertex.glsl
src/: main.cpp
src/core/: application.cpp  game.cpp  game_flow_fsm.cpp  resources.cpp
src/core/ecs/: ecs.cpp
src/core/editor/: editor.cpp  imgui_impl.cpp  world_map_edit.cpp
src/core/fsm/: game_flow_fsm.cpp
src/gameplay/scenes/: clans_list_scene.cpp  loading_scene.cpp  main_menu_scene.cpp  world_map_scene.cpp
src/gameplay/states/: start_game_state.cpp
src/generation/: map_generation.cpp  text_generation.cpp
src/graphics/: Mesh.cpp  camera.cpp  gpu_buffer.cpp  material.cpp  primitive_factory.cpp  renderer.cpp  renderer2d.cpp  shader.cpp  shader_program.cpp
src/graphics/camera/: camera_ortho.cpp
src/graphics/opengl/: gpu_buffer.cpp  opengl_framebuffer.cpp  opengl_impl.cpp  opengl_renderer.cpp
src/graphics/rendering/: canvas_2d.cpp  render_queue.cpp
src/rmui/: ui_button.cpp  ui_image.cpp  ui_label.cpp  ui_layout.cpp  ui_window.cpp
src/rmui/factories/: ui_factory.cpp
src/rmui/style/: ui_style.cpp
src/services/: audio_service.cpp  file_service.cpp  input_service.cpp  log_service.cpp  ui_service.cpp
